# OS

./: CMakeLists.txt
LR1/part1/: Makefile  main.c
LR1/part2/: Makefile  main.c
LR1/part3/: Makefile  main.c
LR1/part4/: Makefile  main.c
Pr1/: Makefile  main.c
Pr2/: Main.c  Makefile
Pr3/part1/: Array.c  Makefile
Pr3/part2/: ArrayList  ArrayList.c  Makefile
Pr3/part3/: DotsMassTransfer.c  Makefile
Pr3/part4/: LinkedList.c  Makefile
Pr3/part5/: Makefile  OneDimensional.c
Pr4/part1/: EnvironmentVariables.c  Makefile
Pr4/part2/: Makefile  Search.c
Pr4/part3/: Makefile  Setenv.c
Pr4/part4/: Delenv.c  Makefile
Pr4/part5/: Getinf.c  Makefile
Pr4/part6/: Getinfc.c  Makefile
Pr4/part7/: Makefile  environ.c
Pr5/part1/: Makefile  main.c
Pr5/part2/: Makefile  main.c
Pr5/part3/: Makefile  main.c
Pr5/part4/: Makefile
Pr6/part1/: Makefile  child  child.c  parent  parent.c
task3/Arr/: Makefile  main.c
task3/ArrayList/: Makefile  main.c
task3/LinkedList/: Makefile  main.c
task3/Matrix/: Makefile  main.c
task3/Points/: Makefile  main.c
