cmake_minimum_required(VERSION 3.26)
project(untitled)

set(CMAKE_C_STANDARD 11)

add_executable(task1
        LR1/part1/main.c
        LR1/part1/main.c)

add_executable(task2
        LR1/part2/main.c
        LR1/part2/main.c)


add_executable(task3ArrayList
        LR1/part3/main.c
        LR1/part3/main.c)

add_executable(task4
        LR1/part4/main.c
        LR1/part4/main.c)