cmake_minimum_required(VERSION 3.26)
project(untitled)

set(CMAKE_C_STANDARD 11)

add_executable(task1
        LR1/part1/main.c
        LR1/part1/main.c
        )

add_executable(task2
        LR1/part2/main.c
        LR1/part2/main.c)


add_executable(task3ArrayList
        LR1/part3/main.c
        LR1/part3/main.c)

add_executable(task4
        LR1/part4/main.c
        LR1/part4/main.c)

add_executable(Pr1
        Pr1/main.c
        Pr1/main.c
        Pr1/main.c)

add_executable(Pr3
        Pr3/part1/Array.c
        Pr3/part2/ArrayList.c
        Pr3/part3/DotsMassTransfer.c
        Pr3/part4/LinkedList.c
        Pr3/part5/OneDimensional.c)

add_executable(Pr2
        Pr2/Main.c)

add_executable(Pr4
        Pr4/part1/EnvironmentVariables.c
        Pr4/part2/Search.c
        Pr4/part3/Setenv.c
        Pr4/part4/Delenv.c
        Pr4/part5/Getinf.c
        Pr4/part6/Getinfc.c
        Pr4/part7/environ.c)
